# fce-calendar

./: .gitattributes  .gitignore  DEVELOPER.md  README.md  ci_cd_blueprint.md  gemini.md  main.py  package-lock.json  package.json  playwright.config.ts  prek.toml  project_blueprint.md  pyproject.toml  ruff.toml  vercel.json
.github/workflows/: backend-tests.yml  database-migrations.yml  e2e-tests.yml  gatekeeper.yml
api/: __init__.py  generate.py  models.py
api/cron/: __init__.py  reminder_template.html  send_reminders.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/admin/dates/: page.tsx
app/admin/members/: page.tsx
app/api/generate/: route.ts
app/login/: page.tsx
app/register/: page.tsx
docs/: WEBAPP_GUIDE.md  _config.yml  index.md  project_blueprint.md
docs/superpowers/plans/: 2026-04-16-cooldown-slider-rollout.md
docs/superpowers/specs/: 2026-04-16-cooldown-slider-rollout.md
playwright-report/: index.html
supabase/: setup.sql
tests/: __init__.py
tests/api/: test_generate.py
tests/api/cron/: __init__.py  test_send_reminders.py
tests/backend/: test_fairness.py
tests/e2e/: admin.spec.ts
