[project]
name = "fce-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
    "prek",
    "resend",
    "ruff",
    "ty",
]
